<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/root_padding">


    <EditText
        android:id="@+id/etProfileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/profile_name_hint"
        android:textSize="@dimen/dialog_text_size"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/password_hint"
        android:textSize="@dimen/dialog_text_size"

        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etProfileName" />

    <EditText
        android:id="@+id/etConfrim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/confrim_password_hint"
        android:textSize="@dimen/dialog_text_size"

        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pseudonym_hint"

        android:inputType="textPersonName"
        android:textSize="@dimen/dialog_text_size"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etConfrim" />

    <TextView
        android:id="@+id/btLogin"
        android:layout_marginTop="@dimen/dialog_button_top_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/dialog_create"
        android:textSize="@dimen/dialog_button_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUserName" />

    <TextView
        android:id="@+id/btDismiss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_marginTop="@dimen/dialog_button_top_margin"
        android:text="@string/dialog_dimiss"
        android:textSize="@dimen/dialog_button_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUserName" />


</androidx.constraintlayout.widget.ConstraintLayout>